# hw-core

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.emu-test  Justfile  README.md  SECURITY.md  justfile
.codex/environments/: environment.toml
.github/: dependabot.yml
.github/workflows/: android-ci.yml  audit.yml  ci.yml  emu-integration.yml  ios-ci.yml
android/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/lib/: build.gradle.kts  proguard-rules.pro
android/lib/src/main/java/uniffi/hw_ffi/: BleManagerHandleFactory.kt  hw_ffi.kt
android/lib/src/main/java/uniffi/hwcore/: BleManagerHandleFactory.kt
android/lib/src/test/java/io/github/gedgygedgy/rust/thread/: LocalThreadCheckerTest.java
android/patches/: btleplug-Peripheral.patch
android/sample-app/app/: build.gradle.kts  proguard-rules.pro
android/sample-app/app/src/androidTest/java/dev/hewig/hwcore/: AppSmokeTest.kt
android/sample-app/app/src/main/: AndroidManifest.xml
android/sample-app/app/src/main/java/com/example/hwcore/: MainActivity.kt  MainViewModel.kt
android/sample-app/app/src/main/java/com/example/hwcore/ui/theme/: Color.kt  Theme.kt
android/sample-app/app/src/main/java/dev/hewig/hwcore/: MainActivity.kt  MainViewModel.kt
android/sample-app/app/src/main/java/dev/hewig/hwcore/ui/theme/: Color.kt  Theme.kt
android/sample-app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/scripts/: build-rust.sh
apple/HWCoreKit/: Package.swift  README.md
apple/HWCoreKit/Scripts/: sync-bindings.sh
apple/HWCoreKit/Sources/HWCoreKit/: AsyncUtils.swift  Errors.swift  HWCoreKit.swift  Logging.swift  Models.swift  Timeout.swift  WalletSession.swift
apple/HWCoreKit/Tests/HWCoreKitTests/: HWCoreKitTests.swift
apple/HWCoreKitSampleApp/: Package.swift  README.md  project-ios.yml  project-mac.yml
apple/HWCoreKitSampleApp/Sources/HWCoreKitSampleApp/: main.swift
apple/HWCoreKitSampleApp/Sources/HWCoreKitSampleApp/App/: HWCoreKitSampleApp.swift  LaunchScreen.storyboard
apple/HWCoreKitSampleApp/Sources/HWCoreKitSampleApp/ViewModels/: ContentViewModel.swift
apple/HWCoreKitSampleApp/Sources/HWCoreKitSampleApp/Views/: ContentView+iOS.swift  ContentView+macOS.swift  ContentView.swift
apple/HWCoreKitSampleApp/Support/: Info.plist
apple/HWCoreKitSampleApp/UITests/iOS/: HWCoreKitSampleAppiOSUITests.swift
apple/HWCoreKitSampleApp/UITests/mac/: HWCoreKitSampleAppMacUITests.swift
crates/ble-transport/: Cargo.toml  README.md
crates/ble-transport/examples/: scan_trezor.rs
crates/ble-transport/src/: lib.rs  manager.rs  profile.rs  session.rs
crates/hw-chain/: Cargo.toml
crates/hw-chain/src/: lib.rs
crates/hw-cli/: Cargo.toml
crates/hw-cli/src/: cli.rs  config.rs  logging.rs  main.rs  pairing.rs  ui.rs
crates/hw-cli/src/commands/: address.rs  common.rs  mod.rs  pair.rs  scan.rs  session.rs  sign.rs  sign_message.rs  test_support.rs
crates/hw-cli/src/commands/common/: connect.rs  io.rs  output.rs
crates/hw-cli/src/commands/sign/: request.rs
crates/hw-cli/src/commands/sign_message/: eth_request.rs
crates/hw-cli/tests/: emu_ble.rs
crates/hw-ffi/: Cargo.toml  uniffi.toml
crates/hw-ffi/src/: ble.rs  errors.rs  lib.rs  types.rs  version.rs
crates/hw-ffi/src/ble/: pairing.rs  request_mapping.rs  session.rs  tests.rs  workflow_api.rs  workflow_ops.rs
crates/hw-ffi/tests/: emu_ble.rs
crates/hw-wallet/: Cargo.toml
crates/hw-wallet/src/: bip32.rs  ble.rs  btc.rs  chain.rs  eip712.rs  error.rs  eth.rs  hex.rs  lib.rs  message.rs  message_signing.rs
crates/thp-codec/: Cargo.toml
crates/thp-codec/src/: lib.rs
crates/thp-core/: Cargo.toml  README.md
crates/thp-core/src/: error.rs  lib.rs  link.rs  session.rs  trust.rs
crates/thp-crypto/: Cargo.toml
crates/thp-crypto/src/: frame.rs  lib.rs  noise.rs  traits.rs
crates/thp-proto/: Cargo.toml  build.rs
crates/thp-proto/src/: lib.rs
crates/trezor-connect/: Cargo.toml
crates/trezor-connect/examples/: ble_handshake.rs
crates/trezor-connect/src/: ble.rs  lib.rs  link.rs
crates/trezor-connect/src/ble/: backend_impl.rs  tests.rs
crates/trezor-connect/src/thp/: backend.rs  eip712.rs  error.rs  mod.rs  proto.rs  proto_conversions.rs  state.rs  storage.rs  transport.rs  types.rs  wire.rs  workflow.rs
crates/trezor-connect/src/thp/crypto/: curve25519.rs  mod.rs  pairing.rs  tools.rs
crates/trezor-connect/src/thp/proto/: bitcoin.rs  ethereum.rs  mod.rs  solana.rs
crates/trezor-connect/src/thp/storage/: apple_acl.rs  apple_tests.rs  mod.rs  no_acl.rs  tests.rs  unix.rs  unsupported.rs
crates/trezor-connect/src/thp/workflow/: tests.rs
crates/trezor-connect/tests/: integration_test.rs
docs/: android-app-plan.md  bitcoin-sign-plan.md  btc-sign-with-prev-tx.json  cli-wallet-v1.md  ios-app-plan.md  ios-manual-matrix.md  message-sign-plan.md  plan.md  release-checklist.md  roadmap.md  smoke-matrix.md
scripts/: sync-bindings.sh  test-emu-docker.sh
skills/: code-style.md  comments.md  common-issues.md  defensive-programming.md  development-commands.md  error-handling.md  git-and-commit-guidelines.md  naming.md  project-overview.md  tests.md
skills/ios-build-debug/: SKILL.md
skills/ios-build-debug/agents/: openai.yaml
skills/ios-build-debug/scripts/: capture_ios_debug.sh  capture_macos_debug.sh
tests/data/bitcoin/: btc_build_with_ref_txs.json  btc_missing_ref_txs.json  btc_multisig_sign.json  btc_parse_with_ref_txs.json  btc_prev_index_oob.json  btc_rbf_with_payment_req.json  btc_ref_tx_with_extra_data_sequence.json  btc_sign_with_ref_txs.json
tests/data/ethereum/: eip712_invalid_json_and_hashes.json  eip712_invalid_message_hash_without_domain.json  eip712_invalid_missing_domain_type.json  eip712_invalid_missing_primary_type.json  eth_build_sign_request.json  eth_parse_minimal.json  eth_sign_command_minimal.json
tests/fixtures/: README.md  auto-confirm.py  bluez-emu-bridge.py  emulator_harness.rs  load-seed.py
tests/fixtures/bluez_emu_bridge/: device1.py
