[workspace]
members = [
    "crates/ble-transport",
    "crates/thp-codec",
    "crates/thp-crypto",
    "crates/thp-core",
    "crates/thp-proto",
    "crates/trezor-connect",
    "crates/hw-ffi",
    "crates/hw-cli",
    "crates/hw-wallet",
    "crates/hw-chain",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.lints]
rust.unused = "allow"

[workspace.dependencies]
aes-gcm = { version = "0.10", features = ["aes"] }
anyhow = "1"
async-trait = "0.1"
crc32fast = "1"
hex = "0.4"
parking_lot = "0.12"
prost = "0.14.3"
rand = "0.9.2"
sha2 = "0.10"
thiserror = "2"
tokio = "1"
tracing = "0.1"
uuid = { version = "1", features = ["serde"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
