[workspace]
members = [
    "crates/ble-transport",
    "crates/thp-crypto",
    "crates/thp-core",
    "crates/thp-proto",
    "crates/trezor-connect",
    "crates/hw-ffi",
    "crates/hw-cli",
    "crates/hw-wallet",
    "crates/hw-chain",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "GPL-3.0-only"
version = "0.1.0"
repository = "https://github.com/hewigovens/hw-core"

[workspace.lints]
rust.unused_imports = "warn"
rust.dead_code = "warn"
rust.unused_variables = "warn"

[workspace.dependencies]
aes-gcm = { version = "0.10", features = ["aes"] }
anyhow = "1"
async-trait = "0.1"
btleplug = "0.11.8"
ble-transport = { version = "0.1.0", path = "crates/ble-transport" }
bs58 = "0.5"
clap = { version = "4.5", features = ["derive"] }
crc32fast = "1"
hex = "0.4"
hw-chain = { version = "0.1.0", path = "crates/hw-chain" }
hw-wallet = { version = "0.1.0", path = "crates/hw-wallet" }
parking_lot = "0.12"
prost = "0.14.3"
rand = "0.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thp-core = { version = "0.1.0", path = "crates/thp-core" }
thp-crypto = { version = "0.1.0", path = "crates/thp-crypto" }
thp-proto = { version = "0.1.0", path = "crates/thp-proto" }
thiserror = "2"
tokio = "1"
tracing = "0.1"
trezor-connect = { version = "0.1.0", path = "crates/trezor-connect" }
uuid = { version = "1", features = ["serde"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
