[package]
name = "ble-transport"
version = "0.1.0"
edition = "2021"
description = "BLE transport primitives for hardware wallet SDKs"
license = "Apache-2.0 OR MIT"

[features]
default = ["backend-btleplug"]
backend-btleplug = ["dep:btleplug"]
trezor-safe7 = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
btleplug = { version = "0.11.8", optional = true }
futures = "0.3"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
uuid = { workspace = true }
