[package]
name = "ble-transport"
version = "0.1.0"
edition = "2021"
description = "BLE transport primitives for hardware wallet SDKs"
license = "Apache-2.0 OR MIT"

[features]
default = ["backend-btleplug"]
backend-btleplug = ["dep:btleplug"]
trezor-safe7 = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
btleplug = { git = "https://github.com/trezor/btleplug", rev = "f66eb37ca293bea1708264a319ec02b14e7935ab", optional = true }
futures = "0.3"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tracing = { workspace = true }
uuid = { workspace = true }
