[package]
name = "hw-cli"
version.workspace = true
edition = "2021"
description = "Interactive CLI for Trezor Safe 7 workflows over BLE"
license.workspace = true
[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
ble-transport = { path = "../ble-transport", features = ["backend-btleplug", "trezor-safe7"] }
clap = { version = "4.5", features = ["derive"] }
hex = { workspace = true }
hw-wallet = { path = "../hw-wallet" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
trezor-connect = { path = "../trezor-connect", features = ["ble"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
whoami = "2.1.0"
rustyline = "17.0"
