[package]
name = "hw-cli"
version.workspace = true
edition.workspace = true
description = "CLI for Trezor Safe 7 workflows over BLE"
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
ble-transport = { workspace = true, features = [
    "backend-btleplug",
    "trezor-safe7",
] }
clap = { workspace = true }
hex = { workspace = true }
hw-wallet = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
trezor-connect = { workspace = true, features = ["ble"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
whoami = "2.1.1"
