[package]
name = "hw-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
bindings-cli = [
    "dep:anyhow",
    "dep:camino",
    "dep:clap",
    "dep:uniffi_bindgen",
]

[[bin]]
name = "generate-bindings"
path = "bin/generate_bindings.rs"
required-features = ["bindings-cli"]

[dependencies]
ble-transport = { workspace = true, features = [
    "backend-btleplug",
    "trezor-safe7",
] }
hw-wallet = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
trezor-connect = { workspace = true, features = ["ble"] }
uniffi = { version = "0.31.0", features = ["tokio"] }
uuid = { workspace = true }
anyhow = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
camino = { version = "1", optional = true }
uniffi_bindgen = { version = "0.31.0", features = [
    "cargo-metadata",
], optional = true }
