[package]
name = "hw-ffi"
version.workspace = true
edition.workspace = true
description = "UniFFI bindings for hw-core (Swift/Kotlin)"
license.workspace = true
repository.workspace = true
[lib]
name = "hwcore"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
bindings-cli = ["dep:anyhow", "dep:camino", "dep:clap", "dep:uniffi_bindgen"]

[[bin]]
name = "generate-bindings"
path = "bin/generate_bindings.rs"
required-features = ["bindings-cli"]

[dependencies]
async-trait = { workspace = true }
ble-transport = { workspace = true, features = [
    "backend-btleplug",
    "trezor-safe7",
] }
hw-wallet = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tracing = { workspace = true }
trezor-connect = { workspace = true, features = ["ble"] }
uniffi = { version = "0.31.0", features = ["tokio"] }
uuid = { workspace = true }
anyhow = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
camino = { version = "1", optional = true }
uniffi_bindgen = { version = "0.31.0", features = [
    "cargo-metadata",
], optional = true }

[target.'cfg(target_os = "android")'.dependencies]
btleplug = { workspace = true }
jni = "0.22"
jni-utils = "0.1.1"
tracing-android = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
