[package]
name = "hw-wallet"
version = "0.1.0"
edition.workspace = true
description = "Shared wallet orchestration utilities for CLI and FFI"
license = "Apache-2.0 OR MIT"

[dependencies]
ble-transport = { path = "../ble-transport", features = ["backend-btleplug", "trezor-safe7"] }
hex = { workspace = true }
hw-chain = { path = "../hw-chain" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time"] }
trezor-connect = { path = "../trezor-connect", features = ["ble"] }
tracing = { workspace = true }
