[package]
name = "thp-codec"
version.workspace = true
edition.workspace = true
description = "THP transport framing utilities (length-prefix, chunking, CRC)"
license.workspace = true
repository.workspace = true
[dependencies]
crc32fast = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = "1"
