[package]
name = "thp-core"
version = "0.1.0"
edition = "2021"
description = "Core host-side state machine for the Trezor Host Protocol"
license = "Apache-2.0 OR MIT"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time", "sync"] }
tracing = { workspace = true }
thp-codec = { path = "../thp-codec" }
thp-crypto = { path = "../thp-crypto" }
snow = "0.9"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
