[package]
name = "thp-core"
version.workspace = true
edition.workspace = true
description = "Core host-side state machine for the Trezor Host Protocol"
license.workspace = true
repository.workspace = true
[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time", "sync"] }
tracing = { workspace = true }
thp-codec = { workspace = true }
thp-crypto = { workspace = true }
snow = "0.10.0"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
