[package]
name = "thp-crypto"
version = "0.1.0"
edition = "2021"
description = "Cryptographic primitives for the Trezor Host Protocol (Noise XX over BLE/USB)"
license = "Apache-2.0 OR MIT"

[dependencies]
aes-gcm = { workspace = true }
hkdf = "0.12"
rand = { workspace = true }
sha2 = { workspace = true }
subtle = "2"
thiserror = { workspace = true }
x25519-dalek = { workspace = true }
zeroize = "1"

[dev-dependencies]
hex = { workspace = true }
