[package]
name = "thp-crypto"
version.workspace = true
edition.workspace = true
description = "Cryptographic primitives for the Trezor Host Protocol (Noise XX over BLE/USB)"
license.workspace = true

[dependencies]
aes-gcm = { workspace = true }
hkdf = "0.12"
rand = { workspace = true }
sha2 = { workspace = true }
subtle = "2"
thiserror = { workspace = true }
x25519-dalek = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
