[package]
name = "thp-proto"
version = "0.1.0"
edition = "2021"
description = "Generated Trezor Host Protocol protobuf messages"
license = "Apache-2.0 OR MIT"

[dependencies]
prost = { workspace = true }

[build-dependencies]
prost-build = "0.12"
protoc-bin-vendored = "3"

[features]
default = []

[package.metadata.cargo-machete]
ignored = ["prost"]
