[package]
name = "thp-proto"
version.workspace = true
edition = "2021"
description = "Generated Trezor Host Protocol protobuf messages"
license.workspace = true
[dependencies]
prost = { workspace = true }

[build-dependencies]
prost-build = "0.12"
protoc-bin-vendored = "3"

[features]
default = []

[package.metadata.cargo-machete]
ignored = ["prost"]
