[package]
name = "thp-proto"
version.workspace = true
edition.workspace = true
description = "Generated Trezor Host Protocol protobuf messages"
license.workspace = true
repository.workspace = true
[dependencies]
prost = { workspace = true }

[build-dependencies]
prost-build = "0.14.3"
protoc-bin-vendored = "3"

[features]
default = []

[package.metadata.cargo-machete]
ignored = ["prost"]
