[package]
name = "trezor-connect"
version = "0.1.0"
edition = "2021"
description = "Experimental Rust port of trezor-connect THP workflows"
license = "Apache-2.0 OR MIT"

[features]
default = []
ble = ["dep:ble-transport", "ble-transport/trezor-safe7"]
usb = []

[dependencies]
anyhow = "1"
async-trait = "0.1"
rand = "0.8"
thiserror = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
parking_lot = "0.12"
aes-gcm = { version = "0.10", features = ["aes"] }
sha2 = "0.10"
hmac = "0.12"
x25519-dalek = { version = "2", features = ["static_secrets"] }
num-bigint = "0.4"
num-traits = "0.2"
rand_core = "0.6"
hex = "0.4"
serde_json = "1"
ble-transport = { path = "../ble-transport", optional = true }
thp-core = { path = "../thp-core" }
thp-proto = { path = "../thp-proto" }
prost = "0.12"
tokio = { version = "1", features = ["time"] }
crc32fast = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
rand_chacha = "0.3"
tempfile = "3"
