[package]
name = "trezor-connect"
version = "0.1.0"
edition = "2021"
description = "Experimental Rust port of trezor-connect THP workflows"
license = "Apache-2.0 OR MIT"

[features]
default = []
ble = ["dep:ble-transport", "ble-transport/backend-btleplug", "ble-transport/trezor-safe7"]
usb = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
parking_lot = { workspace = true }
aes-gcm = { workspace = true }
sha2 = { workspace = true }
hmac = "0.12"
x25519-dalek = { workspace = true }
num-bigint = "0.4"
num-traits = "0.2"
rand_core = { workspace = true }
hex = { workspace = true }
serde_json = "1"
ble-transport = { path = "../ble-transport", optional = true }
thp-core = { path = "../thp-core" }
thp-proto = { path = "../thp-proto" }
prost = { workspace = true }
tokio = { workspace = true, features = ["time"] }
crc32fast = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
rand_chacha = "0.3"
tempfile = "3"
