[package]
name = "trezor-connect"
version.workspace = true
edition.workspace = true
description = "Rust port of trezor-connect based on THP"
license.workspace = true
repository.workspace = true
[features]
default = []
ble = [
    "dep:ble-transport",
    "ble-transport/backend-btleplug",
    "ble-transport/trezor-safe7",
]
usb = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
aes-gcm = { workspace = true }
sha2 = { workspace = true }
hmac = "0.12"
x25519-dalek = { workspace = true }
num-bigint = "0.4"
num-traits = "0.2"
hex = { workspace = true }
serde_json = { workspace = true }
ble-transport = { workspace = true, optional = true }
bs58 = { workspace = true }
thp-core = { workspace = true }
thp-proto = { workspace = true }
hw-chain = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true, features = ["time"] }
crc32fast = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
parking_lot = { workspace = true }
tempfile = "3"
